--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -184,8 +184,8 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -25\n",
-    "settings['max_dist_ref'] = 100\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
+    "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
     "    \n",
@@ -208,13 +208,6 @@
     "        %matplotlib qt\n",
     "        NOC_shoreline.extract_shoreline_optical(metadata, settings)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
