--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -66,9 +66,6 @@
     "            'NIR_DRK_THRESH': 0.08,     # [Float] Near-infrared reflectance; values less than are considered potential cloud shadow\n",
     "            'CLD_PRJ_DIST': 2,          # [Float] Maximum distance (km) to search for cloud shadows from cloud edges |\n",
     "            'BUFFER': 50,               # [Integer] Distance (m) to dilate the edge of cloud-identified objects |\n",
-    "\n",
-    "            'reference_shoreline': True,\n",
-    "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
     "   \n",
     "           # labels for classes for the classifier and colours for display\n",
     "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
@@ -89,7 +86,8 @@
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "dates = [['2016-01-01', '2016-06-30'],\n",
+    "dates = [\n",
+    "         ['2016-01-01', '2016-06-30'],\n",
     "         ['2016-07-01', '2016-12-31'],\n",
     "         ['2017-01-01', '2017-06-30'],\n",
     "         ['2017-07-01', '2017-12-31'],\n",
@@ -98,7 +96,8 @@
     "         ['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
-    "         ['2020-07-01', '2020-12-31']]\n",
+    "         ['2020-07-01', '2020-12-31'],\n",
+    "                                     ]\n",
     "\n",
     "inputs = {'sat_name': 'S2'}"
    ]
@@ -184,7 +183,7 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = reference_threshold\n",
+    "inputs['reference_threshold'] = -0.356\n",
     "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
