--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -50,7 +50,8 @@
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "dates = [['2016-01-01', '2016-06-30'],\n",
+    "dates = [\n",
+    "         ['2016-01-01', '2016-06-30'],\n",
     "         ['2016-07-01', '2016-12-31'],\n",
     "         ['2017-01-01', '2017-06-30'],\n",
     "         ['2017-07-01', '2017-12-31'],\n",
@@ -59,7 +60,8 @@
     "         ['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
-    "         ['2020-07-01', '2020-12-31']]\n",
+    "         ['2020-07-01', '2020-12-31'],\n",
+    "                                     ]\n",
     "\n",
     "inputs = {'sat_name': 'S1', 'pixel_size': 10}"
    ]
