--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,22 +38,22 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 32620,\n",
-    "            'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
-    "            'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
+    "            'output_epsg': 32737,\n",
+    "            'max_dist_ref': 100,       \n",
+    "            'min_length_shoreline': 500, \n",
     "            }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'kenya'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "dates = [\n",
-    "         ['2016-01-01', '2016-06-30'],\n",
-    "         ['2016-07-01', '2016-12-31'],\n",
-    "         ['2017-01-01', '2017-06-30'],\n",
+    "#         ['2016-01-01', '2016-06-30'],\n",
+    "#         ['2016-07-01', '2016-12-31'],\n",
+    "#         ['2017-01-01', '2017-06-30'],\n",
     "         ['2017-07-01', '2017-12-31'],\n",
     "         ['2018-01-01', '2018-06-30'],\n",
     "         ['2018-07-01', '2018-12-31'],\n",
