refernce shoreline fixed

--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32620,\n",
+    "settings ={'output_epsg': 32737,\n",
     "           'max_dist_ref': 100,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
@@ -81,7 +81,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'kenya'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## find reference threshold"
+    "## find reference threshold and reference shoreline"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -0.356\n",
+    "inputs['reference_threshold'] = -0.3\n",
     "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
@@ -192,7 +192,7 @@
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "    inputs['site_name'] = site_name\n",
     "    inputs['median_dir_path'] = median_dir_path\n",
-    "    settings['reference_shoreline'] = NOC_preprocess.load_reference_shoreline_median(inputs)\n",
+    "    settings['reference_shoreline'] = NOC_preprocess.load_reference_shoreline(inputs)\n",
     "    printProgress('')\n",
     "        \n",
     "    for date_pair in dates:\n",
