refactored pre-processing

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -34,18 +34,18 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "from utils.print_utils import printProgress, printWarning\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess,\\\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 32737,\n",
+    "            'output_epsg': 32630,\n",
     "            'max_dist_ref': 100,       \n",
     "            'min_length_shoreline': 500, \n",
     "            }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'kenya'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -157,7 +157,7 @@
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "    inputs['site_name'] = site_name\n",
     "    inputs['median_dir_path'] = median_dir_path \n",
-    "    settings['reference_shoreline'] = NOC_preprocess.load_reference_shoreline(inputs)\n",
+    "    settings['reference_shoreline'] = NOC_shoreline.load_reference_shoreline(inputs)\n",
     "        \n",
     "    for date_pair in dates:\n",
     "\n",
