--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32737,\n",
+    "settings ={'output_epsg': 32630,\n",
     "           'max_dist_ref': 100,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
@@ -81,7 +81,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'kenya'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -192,7 +192,7 @@
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "    inputs['site_name'] = site_name\n",
     "    inputs['median_dir_path'] = median_dir_path\n",
-    "    settings['reference_shoreline'] = NOC_preprocess.load_reference_shoreline(inputs)\n",
+    "    settings['reference_shoreline'] = NOC_shoreline.load_reference_shoreline(inputs)\n",
     "    printProgress('')\n",
     "        \n",
     "    for date_pair in dates:\n",
