--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,14 +38,13 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 32630,\n",
-    "            'max_dist_ref': 100,       \n",
+    "            'output_epsg': 32620,   \n",
     "            'min_length_shoreline': 500, \n",
     "            }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
