--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32630,\n",
+    "settings ={'output_epsg': 32620,\n",
     "\n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -80,7 +80,7 @@
     "          }\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -153,7 +153,7 @@
    "source": [
     "inputs['pansharpen'] = True\n",
     "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
-    "settings['max_dist_ref'] = 200\n",
+    "settings['max_dist_ref'] = 250\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -183,8 +183,8 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -0.3\n",
-    "settings['max_dist_ref'] = 50\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
+    "settings['max_dist_ref'] = 100\n",
     "\n",
     "for site in sites:\n",
     "    \n",
