--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -117,7 +117,7 @@
    "source": [
     "inputs['polarisation'] = 'VH'\n",
     "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
-    "inputs['sigma'] = 1\n",
+    "inputs['sigma'] = 5\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -146,9 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['reference_threshold'] = reference_threshold\n",
+    "inputs['reference_threshold'] = -23\n",
     "inputs['polarisation'] = 'VH'\n",
-    "settings['max_dist_ref'] = 50\n",
+    "settings['max_dist_ref'] = 150\n",
     "\n",
     "for site in sites:\n",
     "    \n",
