--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "inputs['pansharpen'] = True\n",
     "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
-    "settings['max_dist_ref'] = 250\n",
+    "settings['max_dist_ref'] = 50\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -183,8 +183,8 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = reference_threshold\n",
-    "settings['max_dist_ref'] = 100\n",
+    "inputs['reference_threshold'] = -0.36\n",
+    "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
     "    \n",
