--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -0.36\n",
+    "inputs['reference_threshold'] = reference_threshold\n",
     "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
