--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -34,17 +34,17 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "from utils.print_utils import printProgress, printSuccess, printWarning\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
-    "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools\n",
     "\n",
     "settings ={'output_epsg': 32620,\n",
+    "           'sat_name': 'S2',\n",
     "\n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
     "            # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
     "            'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
     "            'buffer_size': 150,         # radius (in metres) for buffer around sandy pixels considered in the shoreline detection\n",
-    "            'min_length_sl': 200,       # minimum length (in metres) of shoreline perimeter to be valid\n",
+    "            'min_length_shoreline': 200,       # minimum length (in metres) of shoreline perimeter to be valid\n",
     "            'cloud_mask_issue': False,  # switch this parameter to True if sand pixels are masked (in black) on many images  \n",
     " \n",
     "            ## Image download Parameters\\n\",\n",
@@ -86,19 +86,17 @@
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "dates = [\n",
-    "         ['2016-01-01', '2016-06-30'],\n",
-    "         ['2016-07-01', '2016-12-31'],\n",
-    "         ['2017-01-01', '2017-06-30'],\n",
-    "         ['2017-07-01', '2017-12-31'],\n",
-    "         ['2018-01-01', '2018-06-30'],\n",
-    "         ['2018-07-01', '2018-12-31'],\n",
-    "         ['2019-01-01', '2019-06-30'],\n",
+    "#         ['2016-01-01', '2016-06-30'],\n",
+    "#         ['2016-07-01', '2016-12-31'],\n",
+    "#         ['2017-01-01', '2017-06-30'],\n",
+    "#         ['2017-07-01', '2017-12-31'],\n",
+    "#         ['2018-01-01', '2018-06-30'],\n",
+    "#         ['2018-07-01', '2018-12-31'],\n",
+    "#         ['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31'],\n",
-    "                                     ]\n",
-    "\n",
-    "inputs = {'sat_name': 'S2'}"
+    "                                     ]"
    ]
   },
   {
@@ -122,27 +120,28 @@
     "\n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['median_dir_path'] = median_dir_path\n",
-    "    inputs['polygon'] = roi_polygon\n",
-    "    inputs['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path\n",
+    "    settings['polygon'] = roi_polygon\n",
+    "    settings['site_name'] = site_name\n",
     "        \n",
     "    for date_pair in dates:\n",
     "        \n",
-    "        inputs['dates'] = date_pair \n",
-    "        settings['inputs'] = inputs\n",
+    "        settings['dates'] = date_pair \n",
     "        \n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
     "        NOC_download.retrieve_median_optical(settings)\n",
     "    \n",
-    "    metadata = NOC_download.save_metadata(settings)"
+    "    NOC_download.save_metadata(settings)\n",
+    "            \n",
+    "print('FINISHED ...')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## find reference threshold and reference shoreline"
+    "## find reference shoreline"
    ]
   },
   {
@@ -151,22 +150,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['pansharpen'] = True\n",
-    "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
-    "settings['max_dist_ref'] = 150\n",
+    "settings['pansharpen'] = True\n",
+    "settings['dates'] = ['2019-07-01', '2020-12-31']\n",
+    "settings['max_dist_ref'] = 75\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['site_name'] = site_name\n",
-    "    inputs['median_dir_path'] = median_dir_path\n",
-    "    settings['inputs'] = inputs\n",
+    "    settings['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path\n",
     "    \n",
     "    printProgress(f'processing {site_name}')\n",
     "    \n",
     "    %matplotlib qt\n",
-    "    reference_threshold = NOC_shoreline.find_reference_threshold(settings)"
+    "    NOC_shoreline.find_reference_shoreline(settings)\n",
+    "            \n",
+    "print('FINISHED ...')"
    ]
   },
   {
@@ -182,30 +182,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['pansharpen'] = True\n",
-    "inputs['reference_threshold'] = -0.5\n",
+    "settings['pansharpen'] = True\n",
+    "settings['reference_threshold'] = -0.35\n",
     "settings['max_dist_ref'] = 50\n",
     "\n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['site_name'] = site_name\n",
-    "    inputs['median_dir_path'] = median_dir_path\n",
-    "    settings['reference_shoreline'] = NOC_shoreline.load_reference_shoreline(inputs)\n",
+    "    settings['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path\n",
     "    printProgress('')\n",
     "        \n",
     "    for date_pair in dates:\n",
     " \n",
-    "        inputs['dates'] = date_pair \n",
-    "        settings['inputs'] = inputs\n",
-    "\n",
+    "        settings['dates'] = date_pair \n",
+    "    \n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
-    "        metadata = NOC_download.load_metadata(settings)\n",
-    "        \n",
     "        %matplotlib qt\n",
-    "        NOC_shoreline.extract_shoreline_optical(metadata, settings)"
+    "        NOC_shoreline.extract_shoreline_optical(settings, batch=True)\n",
+    "                \n",
+    "print('FINISHED ...')"
    ]
   },
   {
