--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -33,13 +33,15 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils.print_utils import printProgress, printWarning\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
-    "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
+    "from utils.print_utils import printProgress, printWarning, printSuccess\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools\n",
     "\n",
     "settings = {\n",
     "            'output_epsg': 32620,   \n",
     "            'min_length_shoreline': 500, \n",
+    "            \n",
+    "            'sat_name': 'S1',\n",
+    "            'pixel_size': 10,\n",
     "            }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
@@ -60,9 +62,7 @@
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31'],\n",
-    "                                     ]\n",
-    "\n",
-    "inputs = {'sat_name': 'S1', 'pixel_size': 10}"
+    "                                     ]"
    ]
   },
   {
@@ -86,27 +86,28 @@
     "\n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['polygon'] = roi_polygon\n",
-    "    inputs['site_name'] = site_name\n",
-    "    inputs['median_dir_path'] = median_dir_path\n",
+    "    settings['polygon'] = roi_polygon\n",
+    "    settings['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path\n",
     "        \n",
     "    for date_pair in dates:\n",
     "\n",
-    "        inputs['dates'] = date_pair \n",
-    "        settings['inputs'] = inputs\n",
+    "        settings['dates'] = date_pair \n",
     "        \n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
-    "        NOC_download.retrieve_median_sar(inputs)\n",
+    "        NOC_download.retrieve_median_sar(settings)\n",
     "        \n",
-    "    metadata = NOC_download.save_metadata(settings)"
+    "    NOC_download.save_metadata(settings)\n",
+    "            \n",
+    "print('FINISHED ...')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## find reference threshold and extract reference shoreline"
+    "## find reference shoreline"
    ]
   },
   {
@@ -115,22 +116,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['polarisation'] = 'VH'\n",
-    "inputs['dates'] = ['2016-01-01', '2020-12-31']\n",
-    "inputs['sigma'] = 5\n",
+    "settings['polarisation'] = 'VH'\n",
+    "settings['dates'] = ['2016-01-01', '2020-12-31']\n",
+    "settings['sigma'] = 4\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['site_name'] = site_name\n",
-    "    inputs['median_dir_path'] = median_dir_path\n",
-    "    settings['inputs'] = inputs    \n",
+    "    settings['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path   \n",
     "    \n",
     "    printProgress(f'processing {site_name}')\n",
     "\n",
     "    %matplotlib qt\n",
-    "    reference_threshold = NOC_shoreline.find_reference_threshold(settings)"
+    "    NOC_shoreline.find_reference_shoreline(settings)\n",
+    "            \n",
+    "print('FINISHED ...')"
    ]
   },
   {
@@ -146,29 +148,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['reference_threshold'] = -24.0\n",
-    "inputs['polarisation'] = 'VH'\n",
-    "settings['max_dist_ref'] = 100\n",
+    "settings['reference_threshold'] = -24.0\n",
+    "settings['polarisation'] = 'VH'\n",
+    "settings['max_dist_ref'] = 150\n",
     "\n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "    inputs['site_name'] = site_name\n",
-    "    inputs['median_dir_path'] = median_dir_path \n",
-    "    settings['reference_shoreline'] = NOC_shoreline.load_reference_shoreline(inputs)\n",
+    "    settings['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path \n",
+    "    NOC_shoreline.load_reference_shoreline(settings)\n",
     "        \n",
     "    for date_pair in dates:\n",
     "\n",
-    "        inputs['dates'] = date_pair\n",
-    "        settings['inputs'] = inputs    \n",
+    "        settings['dates'] = date_pair \n",
     "        \n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
-    "        \n",
-    "        metadata = NOC_download.load_metadata(settings)\n",
     "\n",
     "        %matplotlib qt\n",
-    "        NOC_shoreline.extract_shoreline_sar(metadata, settings)"
+    "        NOC_shoreline.extract_shoreline_sar(settings, batch=True)\n",
+    "        \n",
+    "print('FINISHED ...')"
    ]
   },
   {
