batch processing refined

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -36,21 +36,23 @@
     "from utils.print_utils import printProgress, printWarning, printSuccess\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools\n",
     "\n",
-    "settings = {\n",
-    "            'output_epsg': 32620,   \n",
-    "            'min_length_shoreline': 500, \n",
-    "            \n",
-    "            'sat_name': 'S1',\n",
-    "            'pixel_size': 10,\n",
-    "            }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
     "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
+    "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
+    "settings = {\n",
+    "            'output_epsg': 32620,   \n",
+    "            'min_length_shoreline': 500, \n",
+    "            \n",
+    "            'sat_name': 'S1',\n",
+    "            'pixel_size': 10,\n",
+    "            'results_dir_path': results_dir_path\n",
+    "            }\n",
     "dates = [\n",
     "         ['2016-01-01', '2016-06-30'],\n",
     "         ['2016-07-01', '2016-12-31'],\n",
