--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -35,8 +35,17 @@
     "import matplotlib.pyplot as plt\n",
     "from utils.print_utils import printProgress, printSuccess, printWarning\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools\n",
+    "        \n",
+    "# directory where the data will be accessed and stored\n",
+    "data_partition = 'c:\\\\data\\\\coastsat'\n",
+    "country = 'STV'\n",
+    "base_dir_path = os.path.join(data_partition, country)  \n",
+    "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
+    "results_dir_path = os.path.join(base_dir_path, 'results')\n",
+    "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "settings ={'output_epsg': 32620,\n",
+    "settings ={'results_dir_path': results_dir_path,\n",
+    "           'output_epsg': 32620,\n",
     "           'sat_name': 'S2',\n",
     "\n",
     "           'cloud_thresh':0.9,\n",
@@ -55,7 +64,6 @@
     "            'add_L7_to_L8': False,      # Add Landsat 7 to Landsat 8 median composite if they are in same time period\\n\",\n",
     "            'LCloudThreshold': 35,     # Pixels from a single image in a collection larger than this cloud score threshold\\n\",\n",
     "                                       # will be masked.\\n\",\n",
-    "            'sand_color': '',\n",
     "           \n",
     "           'coregistration': False,\n",
     "           \n",
@@ -78,25 +86,22 @@
     "                             '60m': [['B12'], 60]}, },\n",
     "            'SWIR': 'B12',\n",
     "          }\n",
-    "# directory where the data will be accessed and stored\n",
-    "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
-    "base_dir_path = os.path.join(data_partition, country)  \n",
-    "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
-    "sites = os.listdir(sites_dir_path)\n",
+    "\n",
     "\n",
     "dates = [\n",
-    "#         ['2016-01-01', '2016-06-30'],\n",
-    "#         ['2016-07-01', '2016-12-31'],\n",
-    "#         ['2017-01-01', '2017-06-30'],\n",
-    "#         ['2017-07-01', '2017-12-31'],\n",
-    "#         ['2018-01-01', '2018-06-30'],\n",
-    "#         ['2018-07-01', '2018-12-31'],\n",
-    "#         ['2019-01-01', '2019-06-30'],\n",
+    "         ['2016-01-01', '2016-06-30'],\n",
+    "         ['2016-07-01', '2016-12-31'],\n",
+    "         ['2017-01-01', '2017-06-30'],\n",
+    "         ['2017-07-01', '2017-12-31'],\n",
+    "         ['2018-01-01', '2018-06-30'],\n",
+    "         ['2018-07-01', '2018-12-31'],\n",
+    "         ['2019-01-01', '2019-06-30'],\n",
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31'],\n",
-    "                                     ]"
+    "                                     ]\n",
+    "\n",
+    "settings['date_range'] = ['2019-07-01', '2020-12-31']"
    ]
   },
   {
@@ -151,8 +156,7 @@
    "outputs": [],
    "source": [
     "settings['pansharpen'] = True\n",
-    "settings['dates'] = ['2019-07-01', '2020-12-31']\n",
-    "settings['max_dist_ref'] = 75\n",
+    "settings['max_dist_ref'] =150\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -164,8 +168,8 @@
     "    printProgress(f'processing {site_name}')\n",
     "    \n",
     "    %matplotlib qt\n",
-    "    NOC_shoreline.find_reference_shoreline(settings)\n",
-    "            \n",
+    "    NOC_shoreline.find_reference_shoreline(settings) \n",
+    "\n",
     "print('FINISHED ...')"
    ]
   },
@@ -183,8 +187,9 @@
    "outputs": [],
    "source": [
     "settings['pansharpen'] = True\n",
-    "settings['reference_threshold'] = -0.35\n",
-    "settings['max_dist_ref'] = 50\n",
+    "settings['reference_threshold'] = -0.2\n",
+    "settings['max_dist_ref'] = 100\n",
+    "settings['site_list'] = ['SaltWhistleBay']\n",
     "\n",
     "for site in sites:\n",
     "    \n",
@@ -201,7 +206,10 @@
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
     "        %matplotlib qt\n",
-    "        NOC_shoreline.extract_shoreline_optical(settings, batch=True)\n",
+    "        try:\n",
+    "            NOC_shoreline.extract_shoreline_optical(settings, batch=True)\n",
+    "        except Exception:\n",
+    "            printWarning('skipping image')\n",
     "                \n",
     "print('FINISHED ...')"
    ]
