--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -39,14 +39,14 @@
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 32620,   \n",
+    "            'output_epsg': 27700,   \n",
     "            'min_length_shoreline': 500, \n",
     "            \n",
     "            'sat_name': 'S1',\n",
@@ -64,7 +64,9 @@
     "         ['2019-07-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31'],\n",
-    "                                     ]"
+    "                                     ]\n",
+    "\n",
+    "settings['date_range'] = ['2016-01-01', '2020-12-31']"
    ]
   },
   {
@@ -119,7 +121,6 @@
    "outputs": [],
    "source": [
     "settings['polarisation'] = 'VH'\n",
-    "settings['dates'] = ['2016-01-01', '2020-12-31']\n",
     "settings['sigma'] = 4\n",
     "    \n",
     "for site in sites:\n",
@@ -169,7 +170,7 @@
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "\n",
     "        %matplotlib qt\n",
-    "        NOC_shoreline.extract_shoreline_sar(settings, batch=True)\n",
+    "        NOC_shoreline.extract_shoreline_sar(settings, batch=False)\n",
     "        \n",
     "print('FINISHED ...')"
    ]
