--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -39,14 +39,14 @@
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 27700,   \n",
+    "            'output_epsg': 32620,   \n",
     "            'min_length_shoreline': 500, \n",
     "            \n",
     "            'sat_name': 'S1',\n",
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## download SAR data from GEE"
+    "## download median SAR data from GEE"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## find reference shoreline"
+    "## find median reference shoreline"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## extract shorelines"
+    "## extract median shorelines"
    ]
   },
   {
@@ -170,9 +170,16 @@
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "\n",
     "        %matplotlib qt\n",
-    "        NOC_shoreline.extract_shoreline_sar(settings, batch=False)\n",
+    "        NOC_shoreline.extract_shoreline_sar(settings, batch=True)\n",
     "        \n",
     "print('FINISHED ...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## download all images"
    ]
   },
   {
@@ -180,7 +187,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for site in sites:\n",
+    "    \n",
+    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
+    "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
+    "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
+    "\n",
+    "    site_name = site[:site.find('.')]\n",
+    "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "    settings['polygon'] = roi_polygon\n",
+    "    settings['site_name'] = site_name\n",
+    "    settings['median_dir_path'] = median_dir_path\n",
+    "        \n",
+    "    for date_pair in dates:\n",
+    "\n",
+    "        settings['dates'] = date_pair \n",
+    "        \n",
+    "        printProgress(f'processing {site_name}: {date_pair}')\n",
+    "        \n",
+    "        NOC_download.retrieve_sar(settings)\n",
+    "            \n",
+    "print('FINISHED ...')"
+   ]
   }
  ],
  "metadata": {
