--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -38,14 +38,14 @@
     "        \n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings ={'results_dir_path': results_dir_path,\n",
-    "           'output_epsg': 27700,\n",
+    "           'output_epsg': 32620,\n",
     "           'sat_name': 'S2',\n",
     "\n",
     "           'cloud_thresh':0.9,\n",
@@ -156,6 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "settings['date_range'] = ['2016-01-01', '2019-06-30']\n",
+    "settings['date_range'] = ['2019-07-01', '2020-12-31']\n",
     "settings['pansharpen'] = True\n",
     "settings['max_dist_ref'] = 200\n",
     "    \n",
@@ -187,10 +189,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "settings['date_range'] = ['2016-01-01', '2019-06-30']\n",
+    "settings['date_range'] = ['2019-07-01', '2020-12-31']\n",
     "settings['pansharpen'] = True\n",
-    "settings['reference_threshold'] = -0.25\n",
+    "settings['reference_threshold'] = -0.2\n",
     "settings['max_dist_ref'] = 100\n",
-    "settings['site_list'] = ['che']\n",
+    "settings['site_list'] = ['SaltWhistleBay',]\n",
     "\n",
     "for site in sites:\n",
     "    \n",
