better reference threshold handling

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -66,6 +66,14 @@
     "         ['2020-07-01', '2020-12-31'],\n",
     "                                     ]\n",
     "\n",
+    "dates = [\n",
+    "         ['2016-01-01', '2016-12-31'],\n",
+    "         ['2017-01-01', '2017-12-31'],\n",
+    "         ['2018-01-01', '2018-12-31'],\n",
+    "         ['2019-01-01', '2019-12-31'],\n",
+    "         ['2020-01-01', '2020-12-31'],\n",
+    "                                     ]\n",
+    "\n",
     "settings['date_range'] = ['2016-01-01', '2020-12-31']"
    ]
   },
@@ -151,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['reference_threshold'] = -24.0\n",
+    "settings['reference_threshold'] = -22.0\n",
     "settings['polarisation'] = 'VH'\n",
     "settings['max_dist_ref'] = 150\n",
     "\n",
