--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -87,22 +87,13 @@
     "            'SWIR': 'B12',\n",
     "          }\n",
     "\n",
-    "\n",
     "dates = [\n",
-    "         ['2016-01-01', '2016-06-30'],\n",
-    "         ['2016-07-01', '2016-12-31'],\n",
-    "         ['2017-01-01', '2017-06-30'],\n",
-    "         ['2017-07-01', '2017-12-31'],\n",
-    "         ['2018-01-01', '2018-06-30'],\n",
-    "         ['2018-07-01', '2018-12-31'],\n",
-    "         ['2019-01-01', '2019-06-30'],\n",
-    "         ['2019-07-01', '2019-12-31'],\n",
-    "         ['2020-01-01', '2020-06-30'],\n",
-    "         ['2020-07-01', '2020-12-31'],\n",
-    "                                     ]\n",
-    "\n",
-    "settings['date_range'] = ['2016-01-01', '2019-06-30']\n",
-    "settings['date_range'] = ['2019-07-01', '2020-12-31']"
+    "         ['2016-01-01', '2016-12-31'],\n",
+    "         ['2017-01-01', '2017-12-31'],\n",
+    "         ['2018-01-01', '2018-12-31'],\n",
+    "         ['2019-01-01', '2019-12-31'],\n",
+    "         ['2020-01-01', '2020-12-31'],\n",
+    "                                     ]"
    ]
   },
   {
@@ -118,14 +109,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for site in sites:\n",
-    "        \n",
+    "\"\"\"\n",
+    "sites_rois = [[[-61.166703546,13.386285093], [-61.166703546,13.349894905],\n",
+    "               [-61.216490795,13.386285093], [-61.216490795,13.349894905]],\n",
+    "              [[-61.2057165049999,13.3550601210001], [-61.2057165049999,13.284226463],\n",
+    "               [-61.253194809,13.3550601210001], [-61.253194809,13.284226463]],\n",
+    "              [[-61.252042691,13.2913084200001], [-61.252042691,13.230160147],\n",
+    "               [-61.28130129,13.2913084200001], [-61.28130129,13.230160147]],\n",
+    "              [[-61.259699901,13.233287525], [-61.259699901,13.1776702440001],\n",
+    "               [-61.2866043509999,13.233287525], [-61.2866043509999,13.1776702440001]],\n",
+    "              [[-61.208049102,13.1832541430001], [-61.208049102,13.13343525],\n",
+    "               [-61.2678437329999,13.1832541430001], [-61.2678437329999,13.13343525]],\n",
+    "              [[-61.1270383959999,13.3867923610001], [-61.1270383959999,13.365715129],\n",
+    "               [-61.1728832279999,13.3867923610001], [-61.1728832279999,13.365715129]],\n",
+    "              [[-61.107290701,13.3673933800001],  [-61.107290701,13.2866351280001],\n",
+    "               [-61.1352551479999,13.3673933800001], [-61.1352551479999,13.2866351280001]],\n",
+    "              [[-61.1069099169999,13.29456651], [-61.1069099169999,13.2067607450001],\n",
+    "               [-61.1298686229999,13.29456651], [-61.1298686229999,13.2067607450001]],\n",
+    "              [[-61.125427504,13.2127523570001], [-61.125427504,13.137030705],\n",
+    "               [-61.1617257629999,13.2127523570001], [-61.1617257629999,13.137030705]],\n",
+    "              [[-61.157544898,13.142036698],[-61.157544898,13.1203589470001],\n",
+    "               [-61.2120815659999,13.142036698],[-61.2120815659999,13.1203589470001]],\n",
+    "              [[-61.38028666,12.651823393],[-61.38028666,12.627519251],\n",
+    "               [-61.4029449619999,12.651823393],[-61.4029449619999,12.627519251]]]\"\"\"\n",
+    "\n",
+    "#for site_index, site_roi in enumerate(sites_rois):\n",
+    "for site in sites:       \n",
     "    kml_filepath = os.path.join(sites_dir_path, site)\n",
     "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
+    "    roi_polygon = SDS_tools.smallest_rectangle(site_roi)\n",
+    "#    roi_polygon = site_roi\n",
+    "#    site_name = 'site_' + str(site_index+1)\n",
     "\n",
     "    site_name = site[:site.find('.')]\n",
-    "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "    site_dir_path = os.path.join(base_dir_path, site_name)\n",
+    "#    if not os.path.exists(site_dir_path):\n",
+    "#        os.mkdir(site_dir_path)\n",
+    "    median_dir_path = os.path.join(site_dir_path, 'median')\n",
+    "    if not os.path.exists(median_dir_path):\n",
+    "        os.mkdir(median_dir_path)\n",
+    "        \n",
     "    settings['median_dir_path'] = median_dir_path\n",
     "    settings['polygon'] = roi_polygon\n",
     "    settings['site_name'] = site_name\n",
@@ -156,10 +180,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['date_range'] = ['2016-01-01', '2019-06-30']\n",
-    "settings['date_range'] = ['2019-07-01', '2020-12-31']\n",
+    "settings['date_range'] = ['2016-01-01', '2020-12-31']\n",
     "settings['pansharpen'] = True\n",
-    "settings['max_dist_ref'] = 200\n",
+    "settings['max_dist_ref'] = 75\n",
     "    \n",
     "for site in sites:\n",
     "    \n",
@@ -189,16 +212,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['date_range'] = ['2016-01-01', '2019-06-30']\n",
-    "settings['date_range'] = ['2019-07-01', '2020-12-31']\n",
+    "settings['date_range'] = ['2016-01-01', '2020-12-31']\n",
+    "\n",
+    "\"\"\"\n",
+    "sites_rois = [[[-61.166703546,13.386285093], [-61.166703546,13.349894905],\n",
+    "               [-61.216490795,13.386285093], [-61.216490795,13.349894905]],\n",
+    "              [[-61.2057165049999,13.3550601210001], [-61.2057165049999,13.284226463],\n",
+    "               [-61.253194809,13.3550601210001], [-61.253194809,13.284226463]],\n",
+    "              [[-61.252042691,13.2913084200001], [-61.252042691,13.230160147],\n",
+    "               [-61.28130129,13.2913084200001], [-61.28130129,13.230160147]],\n",
+    "              [[-61.259699901,13.233287525], [-61.259699901,13.1776702440001],\n",
+    "               [-61.2866043509999,13.233287525], [-61.2866043509999,13.1776702440001]],\n",
+    "              [[-61.208049102,13.1832541430001], [-61.208049102,13.13343525],\n",
+    "               [-61.2678437329999,13.1832541430001], [-61.2678437329999,13.13343525]],\n",
+    "              [[-61.1270383959999,13.3867923610001], [-61.1270383959999,13.365715129],\n",
+    "               [-61.1728832279999,13.3867923610001], [-61.1728832279999,13.365715129]],\n",
+    "              [[-61.107290701,13.3673933800001],  [-61.107290701,13.2866351280001],\n",
+    "               [-61.1352551479999,13.3673933800001], [-61.1352551479999,13.2866351280001]],\n",
+    "              [[-61.1069099169999,13.29456651], [-61.1069099169999,13.2067607450001],\n",
+    "               [-61.1298686229999,13.29456651], [-61.1298686229999,13.2067607450001]],\n",
+    "              [[-61.125427504,13.2127523570001], [-61.125427504,13.137030705],\n",
+    "               [-61.1617257629999,13.2127523570001], [-61.1617257629999,13.137030705]],\n",
+    "              [[-61.157544898,13.142036698],[-61.157544898,13.1203589470001],\n",
+    "               [-61.2120815659999,13.142036698],[-61.2120815659999,13.1203589470001]],\n",
+    "              [[-61.38028666,12.651823393],[-61.38028666,12.627519251],\n",
+    "               [-61.4029449619999,12.651823393],[-61.4029449619999,12.627519251]]]\"\"\"\n",
+    "\n",
+    "\n",
     "settings['pansharpen'] = True\n",
-    "settings['reference_threshold'] = -0.2\n",
+    "settings['reference_threshold'] = -0.475\n",
     "settings['max_dist_ref'] = 100\n",
-    "settings['site_list'] = ['SaltWhistleBay',]\n",
+    "\n",
     "\n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
+    "\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "    settings['site_name'] = site_name\n",
     "    settings['median_dir_path'] = median_dir_path\n",
@@ -213,11 +262,20 @@
     "        %matplotlib qt\n",
     "        try:\n",
     "            NOC_shoreline.extract_shoreline_optical(settings, batch=True)\n",
-    "        except Exception:\n",
+    "        except Exception as inst:\n",
     "            printWarning('skipping image')\n",
+    "            print(type(inst))\n",
+    "            print(inst.args)\n",
     "                \n",
     "print('FINISHED ...')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
